--- a/courses/courses.html
+++ b/courses/courses.html
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div>
-        <div class="home"><a href=C:/Users/qh673/Desktop/web/assignment1/assignment1/home/index.html> <i class="fas fa-home"></i><span>Home</span></a></div>
+        <div class="home"><a href=../home/index.html> <i class="fas fa-home"></i><span>Home</span></a></div>
       </div>
     <div class="w3-section w3-bottombar w3-padding-16">
       <span class="w3-margin-right">Filter:</span> 
