--- a/home/index.html
+++ b/home/index.html
@@ -27,8 +27,8 @@
                 <i class="fa fa-bars"></i>
             </a>
          
-            <a href="C:/Users/qh673/Desktop/web/assignment1/assignment1/resume/resume.html" class="button"><i class="fa fa-user"></i> RESUME</a>
-            <a href="C:/Users/qh673/Desktop/web/assignment1/assignment1/courses/courses.html" class="button"><i class="fa fa-th"></i> COURSES</a>
+            <a href="../resume/resume.html" class="button"><i class="fa fa-user"></i> RESUME</a>
+            <a href="../courses/courses.html" class="button"><i class="fa fa-th"></i> COURSES</a>
             
         </div>
 
