--- a/resume/resume.html
+++ b/resume/resume.html
@@ -49,7 +49,7 @@
     <br><br>
     <!--link to home page-->
     <div class="home">
-      <div class="home"><a href=C:/Users/qh673/Desktop/web/assignment1/assignment1/home/index.html> <i class="fas fa-home"></i><span>Home</span></a></div>
+      <div class="home"><a href=../home/index.html> <i class="fas fa-home"></i><span>Home</span></a></div>
       
 
     </div>
