--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
  <script src="https://kit.fontawesome.com/a2f61a4d1b.js" crossorigin="anonymous"></script>
  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
- <link rel="stylesheet" type="text/css" href="style.css" />
+ <link rel="stylesheet" type="text/css" href="css/resumestyle.css" />
   </head>
   <body>
 <div class="resume">
@@ -34,7 +34,7 @@
       <div class="address"><a href="https://goo.gl/maps/fiTBGT6Vnhy"><i class="fas fa-map-marker"></i><span>Canada, Ottawa</span></a>
       </div>
       <div class="email"><a href="mailto:huan0157@algonquinlive.com"><i class="fas fa-envelope"></i><span>QiHuang</span></a></div>
-      <div class="website"><a href="http://QiHuang.com/" target="_blank"> <i class="fas fa-home"></i><span>QiHuang.com</span></a></div>
+      <div class="website"><a href="http://www.qihuangxia.com/" target="_blank"> <i class="fas fa-home"></i><span>QiHuang.com</span></a></div>
     </div>
     <!--my contact info-->
     <div class="follow">
@@ -49,7 +49,7 @@
     <br><br>
     <!--link to home page-->
     <div class="home">
-      <div class="home"><a href=../home/index.html> <i class="fas fa-home"></i><span>Home</span></a></div>
+      <div class="home"><a href=index.html> <i class="fas fa-home"></i><span>Home</span></a></div>
       
 
     </div>
